tests/snapshots/test_snapshots__apply_dry_run_new_files.snap
---
source: tests/test_snapshots.rs
assertion_line: 120
expression: normalized
---
[dry-run] Plan (2 actions):
[dry-run]  1. create link   [HOME]/.vimrc → [REPO]/base/home/.vimrc
[dry-run]  2. create dir    [HOME]
[dry-run] no changes made
  [dry-run] ✓ ~/.vimrc (base)
  [dry-run] ────────────────────────────────────────
  [dry-run] 1 would be applied, 0 override, 0 skipped (unchanged)
  [dry-run] no changes made
