tests/snapshots/test_snapshots__apply_dry_run_with_overrides.snap
---
source: tests/test_snapshots.rs
expression: normalized
---
[dry-run] symlink created - ~/.vimrc → [REPO]/testbox/home/.vimrc

Overrides:
[dry-run] testbox - ~/.vimrc

1 would be applied, 1 override, 0 skipped (unchanged)
