tests/snapshots/test_snapshots__apply_second_run_all_skipped.snap
---
source: tests/test_snapshots.rs
expression: normalized
---
0 applied, 0 override, 1 skipped (unchanged)
