tests/snapshots/test_snapshots__status_broken_symlink.snap
---
source: tests/test_snapshots.rs
expression: normalized
---
Machine:   testbox
Platform:  [PLATFORM]
Repo:      [REPO]
Branch:    master
Git:       1 deleted
Broken:    1
  ~/.vimrc → base/home/.vimrc (target not found (dangling symlink))
Backups:   0 MB
Conflicts: 0
Inactive:  0
