tests/snapshots/test_snapshots__status_clean.snap
---
source: tests/test_snapshots.rs
expression: normalized
---
Machine:   testbox
Platform:  [PLATFORM]
Repo:      [REPO]
Branch:    master
Git:       clean
Broken:    0
Backups:   0 MB
Conflicts: 0
Inactive:  0
