tests/snapshots/test_snapshots__status_git_dirty.snap
---
source: tests/test_snapshots.rs
expression: normalized
---
Machine:   testbox
Platform:  [PLATFORM]
Repo:      [REPO]
Branch:    master
Git:       1 modified
Broken:    0
Backups:   0 MB
Conflicts: 0
Inactive:  0
