tests/snapshots/test_snapshots__status_inactive_tiers.snap
---
source: tests/test_snapshots.rs
expression: normalized
---
Machine:   testbox
Platform:  [PLATFORM]
Repo:      [REPO]
Branch:    master
Git:       clean
Broken:    0
Backups:   0 MB
Conflicts: 0
Inactive:  1
  ~/.bashrc (tier: [INACTIVE_TIER], file: [INACTIVE_TIER]/home/.bashrc)
