tests/snapshots/test_snapshots__status_tier_conflicts.snap
---
source: tests/test_snapshots.rs
expression: normalized
---
Machine:   testbox
Platform:  [PLATFORM]
Repo:      [REPO]
Branch:    master
Git:       clean
Broken:    0
Backups:   0 MB
Conflicts: 1
  ~/.vimrc: testbox overrides base
Inactive:  0
